--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "bike-station",
   "version": "0.0.1",
 	"engines": {
-    "node": "5.9.1"
+    "node": "~5.9.1"
   },
   "dependencies":
 	{
-		"body-parser": "1.7.0",
-		"cookie-parser": "1.3.2",
-		"ejs": "1.0.0",
-		"express": "4.8.7",
-		"express-session": "1.7.6",
-		"mysql": "2.4.3",
-		"passport": "0.2.1",
+		"body-parser": "~1.7.0",
+		"cookie-parser": "~1.3.2",
+		"ejs": "~1.0.0",
+		"express": "~4.8.7",
+		"express-session": "~1.7.6",
+		"mysql": "~2.4.3",
+		"passport": "~0.2.1",
 		"passport-facebook": "latest"
   	},
 		"scripts": {
